--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -42,54 +42,63 @@
     <h1>{{ plot.current_tree.species.common_name }}</h1>
     <h2>{{ plot.current_tree.species.scientific_name }}</h2>
     <h3>{{ plot.address_full }}</h3>
-    <!-- General Tree Information -->
-    <table class="table table-striped">
-      <h5>{% trans "General Tree Information" %}</h5>
-      <tbody>
-        {% usercanread plot.current_tree "id" as value %}
-        <tr>
-          <td>{% trans "Tree Number" %}</td>
-          <td>{{ value }}</td>
-        </tr>
-        {% endusercanread %}
-        {% with tree=plot.current_tree %}
-        {% if tree %}
-          {% field from "tree.species" for request.user withtemplate "treemap/species_field.html" %}
-          {% trans "Trunk Diameter" as diameter %}
-          {% field diameter from "tree.diameter" for request.user withtemplate "treemap/plot_field.html" %}
-          {% trans "Tree Height" as height %}
-          {% field height from "tree.height" for request.user withtemplate "treemap/plot_field.html" %}
-          {% trans "Canopy Height" as canopy %}
-          {% field canopy from "tree.canopy_height" for request.user withtemplate "treemap/plot_field.html" %}
-          {% for label, udf in tree.udf_names_and_fields %}
+    <form id="plot-form">
+      <a href="javascript:;" id="edit-plot"
+         data-class="display" class="btn">{% trans "Edit" %}</a>
+      <a href="javascript:;" id="save-edit-plot"
+         data-class="edit" class="btn" style="display: none;">{% trans "Save" %}</a>
+      <a href="javascript:;" id="cancel-edit-plot"
+         data-class="edit" class="btn" style="display: none;">{% trans "Cancel" %}</a>
+      <!-- General Tree Information -->
+      <table class="table table-striped">
+        <h5>{% trans "General Tree Information" %}</h5>
+        <tbody>
+          {% usercanread plot.current_tree "id" as value %}
+          <tr>
+            <td>{% trans "Tree Number" %}</td>
+            <td>{{ value }}</td>
+          </tr>
+          {% endusercanread %}
+          {% with tree=plot.current_tree %}
+          {% if tree %}
+            {% field from "tree.species" for request.user withtemplate "treemap/species_field.html" %}
+            {% trans "Trunk Diameter" as diameter %}
+            {% field diameter from "tree.diameter" for request.user withtemplate "treemap/plot_field.html" %}
+            {% trans "Tree Height" as height %}
+            {% field height from "tree.height" for request.user withtemplate "treemap/plot_field.html" %}
+            {% trans "Canopy Height" as canopy %}
+            {% field canopy from "tree.canopy_height" for request.user withtemplate "treemap/plot_field.html" %}
+            {% for label, udf in tree.udf_names_and_fields %}
+              {% field label from udf withtemplate "treemap/plot_field.html" %}
+            {% endfor %}
+          {% endif %}
+          {% endwith %}
+        </tbody>
+      </table>
+      <hr>
+
+      <table class="table table-striped">
+        <h5>{% trans "General Plot Information" %}</h5>
+        <tbody>
+          {% trans "Width" as width %}
+          {% field width from "plot.width" for request.user withtemplate "treemap/plot_field.html" %}
+          {% trans "Length" as len %}
+          {% field len from "plot.length" for request.user withtemplate "treemap/plot_field.html" %}
+          {% trans "Address" as street %}
+          {% field street from "plot.address_street" for request.user withtemplate "treemap/plot_field.html" %}
+          {% trans "City" as city %}
+          {% field city from "plot.address_city" for request.user withtemplate "treemap/plot_field.html" %}
+          {% trans "Postal Code" as zip %}
+          {% field zip from "plot.address_zip" for request.user withtemplate "treemap/plot_field.html" %}
+          {% trans "Original Owner Id" as oid %}
+          {% field oid from "plot.owner_orig_id" for request.user withtemplate "treemap/plot_field.html" %}
+          {# {% field "Read Only" from "plot.readonly" for request.user withtemplate "treemap/plot_field.html" %} #}
+          {% for label, udf in plot.udf_names_and_fields %}
             {% field label from udf withtemplate "treemap/plot_field.html" %}
           {% endfor %}
-        {% endif %}
-        {% endwith %}
-      </tbody>
-    </table>
-    <hr>
-
-    <table class="table table-striped">
-      <h5>{% trans "General Plot Information" %}</h5>
-      <tbody>
-        {% trans "Width" as width %}
-        {% field width from "plot.width" for request.user withtemplate "treemap/plot_field.html" %}
-        {% trans "Length" as len %}
-        {% field len from "plot.length" for request.user withtemplate "treemap/plot_field.html" %}
-        {% trans "Address" as street %}
-        {% field street from "plot.address_street" for request.user withtemplate "treemap/plot_field.html" %}
-        {% trans "City" as city %}
-        {% field city from "plot.address_city" for request.user withtemplate "treemap/plot_field.html" %}
-        {% trans "Postal Code" as zip %}
-        {% field zip from "plot.address_zip" for request.user withtemplate "treemap/plot_field.html" %}
-        {% trans "Original Owner Id" as oid %}
-        {% field oid from "plot.owner_orig_id" for request.user withtemplate "treemap/plot_field.html" %}
-        {% for label, udf in plot.udf_names_and_fields %}
-          {% field label from udf withtemplate "treemap/plot_field.html" %}
-        {% endfor %}
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    <form>
     <hr>
 
     <!-- Yearly Ecosystem Services -->
@@ -129,3 +138,21 @@
 
 </div>
 {% endblock content %}
+{% block scripts %}
+<script>
+(function(require) {
+    require('plot').init({
+        inlineEditForm: {
+            updateUrl: window.location.href,
+            form: '#plot-form',
+            edit: '#edit-plot',
+            save: '#save-edit-plot',
+            cancel: '#cancel-edit-plot',
+            displayFields: '[data-class="display"]',
+            editFields: '[data-class="edit"]',
+            validationFields: '[data-class="error"]'
+        }
+    });
+})(require);
+</script>
+{% endblock scripts %}
