--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -1,9 +1,9 @@
 <div class="accordion" id="map-info">
   <div class="accordion-group">
     <div class="accordion-heading">
-      <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#treeDetails">Tree Details <span class="arrow pull-right"><i class="icon-right"></i></span></a>
+      <a class="accordion-toggle" data-toggle="collapse" data-parent="#map-info" href="#tree-details">Tree Details <span class="arrow pull-right"><i class="icon-right"></i></span></a>
     </div>
-    <div id="treeDetails" class="accordion-body collapse">
+    <div id="tree-detail" class="accordion-body collapse">
       <div class="accordion-inner" id="plot-accordion">
         <!-- The markup returned from the plot detail endpoint looks like
              span.plot-label + br + span.content + p ...
