--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -100,6 +100,11 @@
         </tbody>
       </table>
     <form>
+
+    <a href="javascript:;" class="btn editBtn">Move Tree</a>
+    <a href="javascript:;" class="btn cancelBtn" style="display:none">Cancel Move</a>
+    <div id="map" class="map-small"></div>
+
     <hr>
 
     <!-- Yearly Ecosystem Services -->
@@ -140,9 +145,11 @@
 </div>
 {% endblock content %}
 {% block scripts %}
+<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 (function(require, config) {
       require('plot').init({
+          config: config,
           inlineEditForm: {
               updateUrl: window.location.href,
               form: '#plot-form',
@@ -160,7 +167,11 @@
               template: "#species-element-template",
               hidden: "#plot-species-hidden",
               reverse: "id"
-          }]
+          }],
+          location: {
+              x: {{ plot.geom.x }},
+              y: {{ plot.geom.y }}
+          }
       });
 })(require, otm.settings);
 </script>
