--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -129,6 +129,11 @@
         </tbody>
       </table>
     <form>
+
+    <a href="javascript:;" class="btn editBtn">Move Tree</a>
+    <a href="javascript:;" class="btn cancelBtn" style="display:none">Cancel Move</a>
+    <div id="map" class="map-small"></div>
+
     <hr>
 
     <!-- Yearly Ecosystem Services -->
@@ -169,10 +174,12 @@
 </div>
 {% endblock content %}
 {% block scripts %}
+<script src="http://maps.google.com/maps/api/js?v=3&sensor=false"></script>
 <script>
 (function(require, config) {
       var plot = require('plot')
       plot.init({
+          config: config,
           inlineEditForm: {
               updateUrl: window.location.href,
               form: '#plot-form',
@@ -195,6 +202,10 @@
               form: '#add-photo-form',
               upload: '#addimage',
               show: '#toggleAddPhotoModal'
+          }
+          location: {
+              x: {{ plot.geom.x }},
+              y: {{ plot.geom.y }}
           }
       });
 })(require, otm.settings);
