Add view at the root to facilitate testing
Also adds in a couple of ids on the login/logout links to make the
selenium tests work

--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -46,7 +46,7 @@
               <li><a href="{% url 'profile' %}">{{ request.user }}</a></li>
               <li><a href="{% url 'auth_logout' %}">{% trans "Logout" %}</a></li>
             {% else %}
-              <li><a href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
+              <li><a id="login" href="{% url 'auth_login' %}">{% trans "Login" %}</a></li>
               <li><a href="{% url 'registration_register' %}">{% trans "Sign Up" %}</a></li>
             {% endif %}
           </ul>
