--- a/opentreemap/treemap/templates/treemap/index.html
+++ b/opentreemap/treemap/templates/treemap/index.html
@@ -3,5 +3,5 @@
 
 {% block content %}
 <h1>{{ request.instance.name }}</h1>
-<a href="{% url 'map' instance_id=request.instance.pk %}" class="btn">{% trans "Explore Trees" %}</a>
+<a href="{% url 'map' instance_url_name=request.instance.url_name %}" class="btn">{% trans "Explore Trees" %}</a>
 {% endblock content %}
