Add support for BooleanField to field templatetag and *field.html templates
Since checkboxes are not normally serialized when they are not checked,
inlineEditForm.js and fieldHelpers.js are handling checkboxes separately
from text inputs and selects, and always send true/false when serializing

--- a/opentreemap/treemap/templates/treemap/field.html
+++ b/opentreemap/treemap/templates/treemap/field.html
@@ -26,6 +26,13 @@
                         </option>
                     {% endfor %}
                 </select>
+            {% elif field.data_type == 'bool' %}
+                <input name="{{ field.identifier }}"
+                      {% if field.value %}
+                       checked="checked"
+                      {% endif %}
+                       type="checkbox"
+                       value="{{ field.value }}" />
             {% else %}
                 <input name="{{ field.identifier }}"
                        type="text"
