--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -93,7 +93,8 @@
           {% field zip from "plot.address_zip" for request.user withtemplate "treemap/plot_field.html" %}
           {% trans "Original Owner Id" as oid %}
           {% field oid from "plot.owner_orig_id" for request.user withtemplate "treemap/plot_field.html" %}
-          {# {% field "Read Only" from "plot.readonly" for request.user withtemplate "treemap/plot_field.html" %} #}
+          {% trans "Read Only" as readonly %}
+          {% field readonly from "plot.readonly" for request.user withtemplate "treemap/plot_field.html" %}
           {% for label, udf in plot.udf_names_and_fields %}
             {% field label from udf withtemplate "treemap/plot_field.html" %}
           {% endfor %}
