--- a/opentreemap/treemap/static/css/application.css
+++ b/opentreemap/treemap/static/css/application.css
@@ -62,14 +62,13 @@ input {
         .container-fixedwidth .nav {
                 margin: 0 -15px;
         }
-        .container-fixedwidth .nav.pull-right {
-                margin-right: -15px;
-        }
         .container-fixedwidth .right {
-                float: right;
+                margin-left: 120px;
         }
         .container-fixedwidth .left {
                 float: left;
+                margin-left: 15px;
+                margin-right: 15px;
         }
 
 
