Allow changing plot position from plot detail page
* Hit "Edit" to edit the plot details, then hit "Move Tree" to change plot location

Use new features of inlineEditForm.js:
* Use returned Bacon property "isInEditModeProperty" to update UI as user enters/exits edit mode
* Use "onSaveBefore" callback to augment uploaded data with plot location (plot.geom)
* Use "onSaveSuccess" callback to redraw the map when location is updated

Also:
* update_plot_detail() now returns the geo rev hash (via update_plot_and_tree())

--- a/opentreemap/treemap/templates/treemap/plot_detail.html
+++ b/opentreemap/treemap/templates/treemap/plot_detail.html
@@ -130,8 +130,8 @@
       </table>
     <form>
 
-    <a href="javascript:;" class="btn editBtn">Move Tree</a>
-    <a href="javascript:;" class="btn cancelBtn" style="display:none">Cancel Move</a>
+    <a href="javascript:;" class="btn" style="display:none" id="edit-plot-location">Move Tree</a>
+    <a href="javascript:;" class="btn" style="display:none" id="cancel-edit-plot-location">Cancel Tree Move</a>
     <div id="map" class="map-small"></div>
 
     <hr>
@@ -203,9 +203,13 @@
               upload: '#addimage',
               show: '#toggleAddPhotoModal'
           }
-          location: {
-              x: {{ plot.geom.x }},
-              y: {{ plot.geom.y }}
+          plotLocation: {
+              edit: '#edit-plot-location',
+              cancel: '#cancel-edit-plot-location',
+              location: {
+                  x: {{ plot.geom.x }},
+                  y: {{ plot.geom.y }}
+              }
           }
       });
 })(require, otm.settings);
