Add in sass, restructure, ignore .sass-cache, move third-party css to vendor folder

--- a/opentreemap/treemap/static/css/sass/partials/_admin.scss
+++ b/opentreemap/treemap/static/css/sass/partials/_admin.scss
@@ -1,6 +1,4 @@
-/* ---------------------------------------
-	 Admin Styles (incl. Bulk Uploader)
---------------------------------------- */
+// Partial: Admin
 
 body {
 	background: #f8f8f8;
@@ -32,7 +30,7 @@ body {
 		.admin .right h2 {
 			padding: 0;
 		}
-			
+		
 	.admin .right {
 		border: 1px solid #ddd;
 		padding: 20px;
