--- a/opentreemap/treemap/templates/base.html
+++ b/opentreemap/treemap/templates/base.html
@@ -6,11 +6,10 @@
     <title>{% block title %}OpenTreeMap{% block instance_title %}{% endblock %}{% block page_title %}{% endblock %}{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
-    <link href="{{ STATIC_URL }}css/openlayers.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/bootstrap.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/fontello.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/application.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/responsive.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/vendor/openlayers.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/vendor/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/vendor/fontello.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/main.css" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="{{ STATIC_URL }}js/html5shiv.js"></script>
