--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -74,5 +74,14 @@
   <p>{{name}}</p>
   <p>{{category}}</p>
 </script>
+
+<script id="geocode-results-template" type="text/x-mustache-template">
+<ul class="unstyled">
+{{#candidates}}
+<li><a href="javascript:;" data-class="geocode-result" data-x="{{x}}" data-y="{{y}}" data-srid="{{srid}}" data-address"{{address}}">{{address}}</a></li>
+{{/candidates}}
+</ul>
+</script>
+
 {% endverbatim %}
 {% endblock templates %}
