Add UI connecting boundary search to geocoder
The boundary search box does double duty. If the value typed into the
box does not match any of the autocomplete values, we assume that it
is an address/location to be geocoded.

The two major chunks of this feature are

  - Detecting what is an autocomple and what it not. This is handled
    by Bacon stream processing that puts any unmatched value in an
    attribute on the <input> tag, which can be picked up by the
    geocoder controller

  - Pan and zoom the map if the geocoder returns one result or show
    a popover to disambiguate if the geocoder returns multiple results.
    There is some cool bacon stream processing here, too, so that the
    same pan/zoom handler is used in both situations.

--- a/opentreemap/treemap/templates/instance_base.html
+++ b/opentreemap/treemap/templates/instance_base.html
@@ -40,6 +40,10 @@
     <input type="hidden" id="boundary" />
   </div>
 </div>
+<div class="search-block">
+  <ul id='geocode-results-list'>
+  </ul>
+</div>
 </div> <!-- end search block wrapper -->
 {% endblock search %}
 {% block searchoptions %}
@@ -76,5 +80,14 @@
   <p>{{name}}</p>
   <p>{{category}}</p>
 </script>
+
+<script id="geocode-results-template" type="text/x-mustache-template">
+<ul class="unstyled">
+{{#candidates}}
+<li><a href="javascript:;" data-class="geocode-result" data-x="{{x}}" data-y="{{y}}" data-srid="{{srid}}" data-address"{{address}}">{{address}}</a></li>
+{{/candidates}}
+</ul>
+</script>
+
 {% endverbatim %}
 {% endblock templates %}
