--- a/opentreemap/treemap/static/css/sass/partials/_footer.scss
+++ b/opentreemap/treemap/static/css/sass/partials/_footer.scss
@@ -1,34 +1,20 @@
 // Partial: Footer
 
 footer {
-  bottom: 0;
-  position: fixed;
-  background: #000;
-  width: 100%;
-  font-size: 12px;
-  height: 35px;
-}
+    position: relative;
+    background: #FFF;
+    width: 100%;
+    font-size: 12px;
+    height: 20px;
+    padding: 10px 15px;
 
-footer .nav {
-  margin-bottom: 0;
-}
+    a {
+        color: $subtext-color;
+        font-weight: 700;
 
-.partners {
-  margin-top: 7px;
-  margin-right: 15px;
-  color: #777;
-}
-
-.partners:hover {
-  color: #fff;
-  text-decoration: none;
-}
-
-footer .nav-pills > li > a {
-  color: #777;
-}
-
-footer .nav-pills > li > a:hover {
-  background: none;
-  color: #fff;
+        &:hover {
+            color: $main-text-color;
+            text-decoration: none;
+        }
+    }
 }
