--- a/opentreemap/treemap/static/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/static/css/sass/partials/_layout.scss
@@ -1,24 +1,31 @@
 // Partial: Layout
 
+html,
+body {
+	height: 100%;
+}
+
+.wrapper {
+	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	margin-bottom: -40px;
+}
+
 .content {
-	padding: 30px 0 120px;
+	position: relative;
+	overflow: auto;
+
+	&.map {
+		position: absolute;
+		overflow: hidden;
+		padding-bottom: 40px;
+		top: 195px;
+		width: 100%;
+		bottom: 0;
+	}
 }
 
 @media (max-width: 767px) {
-	.content {
-		margin-top: 120px;
-	}
-
-	.right {
-		width: 100%;
-		clear: both;
-		border-top: 1px solid #eee;
-		margin-top: 50px;
-		padding-bottom: 120px;
-	}
-
-	.right textarea {
-		width: 98%;
-	}
 
 }
