--- a/opentreemap/treemap/templates/treemap/map.html
+++ b/opentreemap/treemap/templates/treemap/map.html
@@ -27,8 +27,8 @@
     <div>{% trans "DBH Min:" %}<input data-class="search" id="dbh-min"></div>
     <div>{% trans "DBH Max:" %}<input data-class="search" id="dbh-max"></div>
 -->
-<div class="content">
-  <div id="map" class="map"> </div>
+<div class="content map">
+  <div id="map"></div>
   <div class="sidebar">
     <div id="sidebar-browse-trees">
       {% include "treemap/map-browse-trees.html" %}
