inlineEditForm.init() no longer does show/hide of elements
...and is simpler

--- a/opentreemap/treemap/templates/treemap/field.html
+++ b/opentreemap/treemap/templates/treemap/field.html
@@ -41,7 +41,8 @@
             </li>
             <li class="chunk-content text-error"
                 data-field="{{ field.identifier }}"
-                data-class="error">
+                data-class="error"
+                style="display: none;">
             </li>
         {% endif %}
     </ul>
