--- a/opentreemap/treemap/templates/treemap/species_field.html
+++ b/opentreemap/treemap/templates/treemap/species_field.html
@@ -33,7 +33,8 @@
     </td>
     <td class="text-error"
         data-field="{{ field.identifier }}"
-        data-class="error">
+        data-class="error"
+        style="display: none;">
     </td>
   </tr>
   {% endif %}
